WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191474
SourceBuffer throws an error when appending a second init segment after changeType().
https://bugs.webkit.org/show_bug.cgi?id=191474
Summary
SourceBuffer throws an error when appending a second init segment after chang...
Jer Noble
Reported
2018-11-09 10:46:48 PST
SourceBuffer throws an error when appending a second init segment after changeType().
Attachments
Patch
(10.28 KB, patch)
2018-11-09 10:48 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews104 for mac-sierra-wk2
(3.10 MB, application/zip)
2018-11-09 11:41 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews101 for mac-sierra
(2.36 MB, application/zip)
2018-11-09 11:49 PST
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews113 for mac-sierra
(3.30 MB, application/zip)
2018-11-09 12:42 PST
,
EWS Watchlist
no flags
Details
Patch for landing
(9.40 KB, patch)
2018-11-09 12:59 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2018-11-09 10:48:10 PST
Created
attachment 354356
[details]
Patch
EWS Watchlist
Comment 2
2018-11-09 11:41:52 PST
Comment hidden (obsolete)
Comment on
attachment 354356
[details]
Patch
Attachment 354356
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/9926061
New failing tests: media/media-source/media-source-changetype-second-init.html
EWS Watchlist
Comment 3
2018-11-09 11:41:54 PST
Comment hidden (obsolete)
Created
attachment 354362
[details]
Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4
2018-11-09 11:49:30 PST
Comment hidden (obsolete)
Comment on
attachment 354356
[details]
Patch
Attachment 354356
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/9926257
New failing tests: media/media-source/media-source-changetype-second-init.html
EWS Watchlist
Comment 5
2018-11-09 11:49:31 PST
Comment hidden (obsolete)
Created
attachment 354366
[details]
Archive of layout-test-results from ews101 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6
2018-11-09 12:42:09 PST
Comment hidden (obsolete)
Comment on
attachment 354356
[details]
Patch
Attachment 354356
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9926553
New failing tests: media/media-source/media-source-changetype-second-init.html
EWS Watchlist
Comment 7
2018-11-09 12:42:10 PST
Comment hidden (obsolete)
Created
attachment 354375
[details]
Archive of layout-test-results from ews113 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-sierra Platform: Mac OS X 10.12.6
Jer Noble
Comment 8
2018-11-09 12:59:06 PST
Created
attachment 354376
[details]
Patch for landing
WebKit Commit Bot
Comment 9
2018-11-09 13:59:30 PST
Comment on
attachment 354376
[details]
Patch for landing Clearing flags on attachment: 354376 Committed
r238054
: <
https://trac.webkit.org/changeset/238054
>
WebKit Commit Bot
Comment 10
2018-11-09 13:59:32 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 11
2018-11-09 14:01:45 PST
<
rdar://problem/45955213
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug