SourceBuffer throws an error when appending a second init segment after changeType(). https://bugs.webkit.org/show_bug.cgi?id=191474

Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-source/media-source-changetype-second-init.html

When encountering an initialization segment after changeType(), add the parsed codec types
to the list of allowed codecs.

* Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::validateInitializationSegment):
* platform/mock/mediasource/MockMediaPlayerMediaSource.cpp:
(WebCore::MockMediaPlayerMediaSource::supportsType):
* platform/mock/mediasource/MockSourceBufferPrivate.cpp:
(WebCore::MockSourceBufferPrivate::canSwitchToType):
* platform/mock/mediasource/MockSourceBufferPrivate.h:

LayoutTests:

* media/media-source/media-source-changetype-second-init-expected.txt: Added.
* media/media-source/media-source-changetype-second-init.html: Added.


Canonical link: https://commits.webkit.org/206268@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238054 268f45cc-cd09-0410-ab3c-d52691b4dbfc